--- a/preamble.tex
+++ b/preamble.tex
@@ -15,7 +15,7 @@
 \usepackage{mathtools}
 \usepackage{soul}
 \usepackage{microtype}
-
+\usepackage[shortlabels]{enumitem}
 %clever ref package
 %must come before following 3 sections
 \usepackage{cleveref}  %must be consistent with names in following 3 sections
